Footer Fix Fixed footer styling, when covered up generating large QR codes.

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     margin: 0;
 }
 #pageBody{
-    height:100vh !important;
+    min-height:100vh !important;
 }
 .card{
     max-width: 700px !important;
